<resources>
    <string name="app_name">Aprajita Foundation</string>
    <string name="aprajita_subheading">An NGO for women and kids Empowerment</string>
    <string name="aprajita_subheading_donation">Donation for a cause</string>
    <string name="event_image_description">Event Image</string>
    <string name="twitter">twitter\n</string>
    <string name="linkedin">linkedin\n</string>
    <string name="instagram">instagram\n</string>
    <string name="facebook">facebook\n</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_events">Events</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_register_admin">Register new Admin</string>
    <string name="menu_payments">Payments</string>
    <string name="action_signout">Sign out</string>
    <string name="menu_team_member">Team Members</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="select_image">Select Image</string>
    <string name="event_date">Date</string>
    <string name="event_location">Location</string>
    <string name="event_description">Description</string>
    <string name="event_title">Title</string>
    <string name="member_name">Name</string>
    <string name="member_position">Designation</string>
    <string name="member_quote">Quote/ Tag line</string>
    <string name="admin_email">Email Address</string>
    <string name="admin_name">Name</string>
    <string name="password">Password</string>
    <string name="admin_image_desc">Admin image desc</string>
    <string name="register_admin">Register Admin</string>
    <string name="profile_image_desc">Profile image description</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="save_changes">Save Changes</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome_message">Welcome, %1$s!</string>
    <string name="today_date_message">"Today is %s "</string>


    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>

    <string name="gallery_fragment_tag">Gallery</string>
    <string name="events_fragment_tag">Events</string>
    <string name="home_fragment_tag">Home</string>
    <string name="profile_fragment_tag">Profile</string>

<!--    Shared Preferences-->
    <string name="apppreferences">AppPreferences</string>
    <string name="name_payment">name</string>
    <string name="email_payment">email</string>
    <string name="phone_payment">phone</string>
    <string name="google_user_data">google_user_data</string>
    <string name="apptheme">appTheme</string>
    <string name="token_login_admin">token</string>
    <string name="user_data_admin">user</string>

    <string name="no_internet_connection">No Internet Connection!</string>

    <string name="event_parcelable">event</string>
    <string name="member_parcelable">member</string>
    <string name="image_url_bundle">image_url</string>
    <string name="transaction_detail">transaction_detail</string>

<!--    Empty field msgs -->
    <string name="error_select_image">Please select an image!</string>
    <string name="error_date_empty">Date can\'t be empty!</string>
    <string name="error_location_empty">Location can\'t be empty!</string>
    <string name="error_description_empty">Description can\'t be empty!</string>
    <string name="error_title_empty">Title can\'t be empty!</string>
    <string name="error_name_empty">Name can\'t be empty!</string>
    <string name="error_position_empty">Position can\'t be empty!</string>
    <string name="error_quote_empty">Quote can\'t be empty!</string>
    <string name="error_invalid_email_address">Invalid email address!</string>
    <string name="error_password_empty">Password can\'t be empty!</string>
    <string name="error_email_empty">Email can\'t be empty!</string>
    <string name="enter_the_phone_number">Enter the phone number!</string>
    <string name="enter_a_valid_10_digit_phone_number">Enter a valid 10-digit phone number!</string>
    <string name="enter_an_amount">Enter an amount!</string>
    <string name="enter_valid_amount">Enter a valid amount!</string>
    <string name="permission_denied">"Permission denied. Give permission from app settings. "</string>
    <string name="aprajita_mission">At Aprajita Foundation, our central mission is the <b>empowerment of women</b>, embodying the spirit of strength, <b>creativity</b>, and resilience. We strive to provide a platform where women can harness their <b>artistic talents</b>, breaking barriers and paving the way for a brighter future.</string>
    <string name="aprajita_intro">Founded by <b>Soni Nilu Jha</b>, Aprajita Foundation is a dynamic and <i>government registered trust</i> based in the vibrant heart of Delhi. Established in <b>March 2021</b>. \n\nOur organization is driven by a profound belief that <b>art should never die and culture should always thrive</b>.</string>
    <string name="aprajita_vision">Our vision extends beyond empowerment, as we passionately <b>promote and preserve art forms</b> that are deeply rooted in culture. We recognize that art is a universal language that bridges gaps and fosters understanding. Thus, we diligently work to ensure that the rich tapestry of cultures is not only celebrated but also <b>passed down to future generations.\n</b></string>
    <string name="donation_title">All donations can help change a life</string>
    <string name="donation_body">\nAs an NGO, we independently organize all our events and rely solely on our own resources. Your donations are crucial for us to continue our work and make a meaningful impact.\n</string>



    <string name="amount">Amount</string>
    <string name="upi_id">UPI ID</string>
    <string name="aprajita_upi_id">ssvekariya11@okicici</string>
    <string name="payee_name">Payee Name</string>
    <string name="demo_payee_name">Sanket Vekariya</string>
    <string name="remarks">Remarks</string>
    <string name="demo_remarks">31–10–19 lunch</string>
    <string name="demo_amount">100</string>
    <string name="send_now_button">send money via upi</string>
    <string name="no_upi_app_found_error">Currently NO UPI APP FOUND, please install at least one to continue</string>
    <string name="no_internet_available_error">Internet connection is not available. Please check and try again</string>
    <string name="transaction_failed">Transaction failed.Please try again</string>
    <string name="payment_cancelled_by_user">Payment cancelled by user</string>
    <string name="payment_success">Transaction successful</string>
    <string name="pay_with">Pay with</string>
    <string name="our_vision">Our Vision</string>
    <string name="our_projects">Our Projects</string>
    <string name="vocational_training_programs">Vocational Training Programs</string>
    <string name="vocational_desc">We offer a range of vocational training programs designed to provide women with the skills they need to start their own businesses or secure meaningful employment.</string>
    <string name="cultural_preservation_initiatives">Cultural Preservation Initiatives</string>
    <string name="cultural_preservation_initiatives_desc">Our cultural preservation initiatives focus on documenting, promoting, and supporting traditional crafts and practices, ensuring that they remain a vital part of our community.</string>
    <string name="community_support_programs">Community Support Programs</string>
    <string name="community_support_programs_desc">We work closely with local communities to provide support services, including healthcare, education, and legal aid, to ensure that women and their families have the resources they need to thrive.</string>
</resources>