<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_admin"
            android:icon="@drawable/baseline_dashboard"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery_admin"
            android:icon="@drawable/gallery_icon"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_events_admin"
            android:icon="@drawable/baseline_event_24"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_team_member"
            android:icon="@drawable/team_members_icon"
            android:title="@string/menu_team_member" />

        <item
            android:id="@+id/nav_register_admin"
            android:icon="@drawable/add_person"
            android:title="@string/menu_register_admin" />

        <item
            android:id="@+id/nav_payments"
            android:icon="@drawable/donate"
            android:title="@string/menu_payments" />


    </group>
</menu>